--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,24 +31,57 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const filterInventors = inventors.filter( v => v.year >= 1500 && v.year <= 1600) ;
+    console.log(filterInventors);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const mapInventors = inventors.map( v => `${v.first} ${v.last}`);
+    console.log(mapInventors);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const youngest = inventors.sort(function(a, b){
+      return a.year - b.year;
+    });
+    console.log(youngest);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const livingYear = inventors.reduce((p, c) => p + (c.passed - c.year), 0);
+    // const livingYear = inventors.reduce(function(p, c){
+    //   return p + (c.passed - c.year);
+    // }, 0);
+    console.log(livingYear);
 
     // 5. Sort the inventors by years lived
+    const lived = inventors.sort( (a, b) => {
+      const last = a.passed - a.year;
+      const next = b.passed - b.year;
+      return next - last;
+    });
+    console.log(lived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    // const sortLast = people.sort(function(a, b) {
+    //   const lastfirstName = a.split(",")[0];
+    //   const lastlastName = a.split(",")[1];
+    //   const nextfirstName = b.split(",")[0];
+    //   const nextlastName = b.split(",")[1];
+    //   return lastfirstName > nextfirstName;
+    // });
+    // console.log(sortLast);
+
+    // const alpha = people.sort((lastOne, nextOne) => {
+    //   const [aLast, aFirst] = lastOne.split(', ');
+    //   const [bLast, bFirst] = nextOne.split(', ');
+    //   return aLast > bLast 
+    // });
+    // console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
