--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -24,6 +24,7 @@
     .panels {
       min-height:100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -41,6 +42,11 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+      flex: auto;
+      flex-direction: column;
+      justify-content: center;
+      display: flex;
+      justify-content: space-around;
     }
 
 
@@ -61,7 +67,17 @@
       font-family: 'Amatic SC', cursive;
       text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
       font-size: 2em;
+      transition:
+        font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+      }
+
+    .panel p:nth-child(1) {
+      transform: translateY(-200px);
     }
+    .panel p:nth-child(3) {
+      transform: translateY(200px);
+    }
+
     .panel p:nth-child(2) {
       font-size: 4em;
     }
@@ -69,6 +85,28 @@
     .panel.open {
       font-size:40px;
     }
+
+    .panel.on {
+      flex: 4;
+      font-size: 40px;
+    }
+
+    /* .panel.on p:not(:nth-child(2)){
+      font-size: 4em;
+    }
+
+    .panel.on p:nth-child(2) {
+      font-size: 8em;
+    } */
+
+    .panel.on-active p:nth-child(1) {
+      transform: translateY(0);
+    }
+    .panel.on-active p:nth-child(3) {
+      transform: translateY(0);
+    }    
+
+    
 
   </style>
 
@@ -102,7 +140,28 @@
   </div>
 
   <script>
+    const panelsWrap = document.querySelectorAll('.panel');
 
+    panelsWrap.forEach(function(panel) {
+      panel.addEventListener('click', handlerClick);
+    })
+
+      panelsWrap.forEach(function(panel) {
+      panel.addEventListener('transitionend', toggleActive);
+    })
+
+    function handlerClick(e) {
+      console.log(this);
+      console.log(e.target);
+      this.classList.toggle("on");
+    }
+
+    function toggleActive(e) {
+      console.log(e.propertyName);
+      if (e.propertyName.includes('flex')) {
+        this.classList.toggle('on-active');
+      }
+    }
   </script>
 
 
