--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -21,13 +21,17 @@
       'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
     
     var arr = [];
-    fetch(endpoint).then(function (response) {
-      return response.json();
-    }).then(function (data) {
-      //console.log(data); city, state, population
-      return arr.push(...data);
-    });
-    console.log(arr);
+    fetch(endpoint)
+      .then(function (response) {
+        // return response.json();
+        return response.json();
+      })
+      .then(function(data) {
+        arr.push(...data);
+      });
+
+      
+
   </script>
 </body>
 
